--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="screen">1050</div>
+
+    <button type="button">AC</button>
+
+    <button type="button">1</button>
+    <button type="button">2</button>
+    <button type="button">3</button>
+    <button type="button">4</button>
+    <button type="button">5</button>
+    <button type="button">6</button>
+    <button type="button">7</button>
+    <button type="button">8</button>
+    <button type="button">9</button>
+
+    <button type="button">+</button>
+    <button type="button">-</button>
+    <button type="button">*</button>
+    <button type="button">/</button>
+    <button type="button">=</button>
 
     <script src="script.js"></script>
 </body>
