make the calculator work on a simple level
theodinproject calculator #6

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="screen">1050</div>
+    <div class="screen">0</div>
 
     <button type="button">AC</button>
 
+    <button type="button">0</button>
     <button type="button">1</button>
     <button type="button">2</button>
     <button type="button">3</button>
